--- a/API Decoupling.ipynb
+++ b/API Decoupling.ipynb
@@ -1352,9 +1352,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mobius-ds",
+   "display_name": "GNN",
    "language": "python",
-   "name": "mobius-data-science"
+   "name": "gnn"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1366,7 +1366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
