--- a/Graph-Dataset.ipynb
+++ b/Graph-Dataset.ipynb
@@ -16,7 +16,9 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "IPython.notebook.set_autosave_interval(120000)"
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(120000)"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -57,7 +59,7 @@
     "\n",
     "import torch_geometric.datasets as datasets\n",
     "import torch_geometric.data as data\n",
-    "import torch_geometric.transforms as transforms\n",
+    " \n",
     "from torch_geometric.datasets import Planetoid\n",
     "from torch_geometric.datasets import TUDataset\n",
     "from torch_geometric.data import InMemoryDataset, Data, download_url, extract_zip, HeteroData\n",
@@ -1188,7 +1190,7 @@
    "hash": "c8e5914284121da5e33e234f24e4d02bdc69909f776a004ca07e9057a3900b7c"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('networks')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1202,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
