Tested the Scaling Transform

--- a/Create Dummy data.ipynb
+++ b/Create Dummy data.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "125edb78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\envs\\GNN\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import os.path as osp\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7663e44b",
    "metadata": {},
    "outputs": [],
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "da7ff3bc",
    "metadata": {},
    "outputs": [],
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cbb560a9",
    "metadata": {},
    "outputs": [],
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e0dfff38",
    "metadata": {},
    "outputs": [],
@@ -87,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d399deaa",
+   "execution_count": 6,
+   "id": "1fd51416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,55 +115,30 @@
     "cust_map = {val:idx for idx,val in enumerate([makeID(6) for _ in range(983)])}\n",
     "prod_map = {val:idx for idx,val in enumerate([makeID(9) for _ in range(2000)])}\n",
     "\n",
-    "pd.DataFrame(list(ship_map.items()),columns = ['ship_name','index']).to_csv(os.path.join(node_dir,\"ship_mapping.csv\"),index=False)\n",
-    "pd.DataFrame(list(ship_map.items()),columns = ['cust_name','index']).to_csv(os.path.join(node_dir,\"cust_mapping.csv\"),index=False)\n",
-    "pd.DataFrame(list(ship_map.items()),columns = ['prod_name','index']).to_csv(os.path.join(node_dir,\"prod_mapping.csv\"),index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0fcb12da",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8., 10.,  6.,  9.],\n",
-       "       [ 6.,  6.,  4.,  9.],\n",
-       "       [ 5.,  2.,  1.,  6.],\n",
-       "       ...,\n",
-       "       [ 9.,  4.,  5.,  3.],\n",
-       "       [ 2.,  9., 10.,  2.],\n",
-       "       [ 4.,  6.,  8.,  7.]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 5., 10.,  3.,  5.,  8.],\n",
-       "       [ 4.,  6.,  5.,  1.,  5.],\n",
-       "       [10.,  1.,  5., 10., 10.],\n",
-       "       ...,\n",
-       "       [ 5.,  3.,  7.,  2., 10.],\n",
-       "       [ 4.,  4.,  1.,  4.,  5.],\n",
-       "       [ 3.,  3.,  8.,  6.,  2.]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "pd.DataFrame(list(ship_map.items()),columns = ['name','index']).to_csv(os.path.join(node_dir,\"ship_mapping.csv\"),index=False)\n",
+    "pd.DataFrame(list(cust_map.items()),columns = ['name','index']).to_csv(os.path.join(node_dir,\"cust_mapping.csv\"),index=False)\n",
+    "pd.DataFrame(list(prod_map.items()),columns = ['name','index']).to_csv(os.path.join(node_dir,\"prod_mapping.csv\"),index=False)\n",
+    "\n",
     "# Edge features \n",
-    "n = random.choice(list(range(150,390)))\n",
-    "np.round(np.random.rand(n, 4) * 10)\n",
-    "np.round(np.random.rand(n, 5) * 10)"
+    "idx = 0 \n",
+    "for _ in range(30):\n",
+    "    num_edges = random.choice(list(range(150,390))) # num_transactions\n",
+    "    scale_n1 = random.choice(list(range(5,20)))\n",
+    "    scale_n2 = random.choice(list(range(9,30)))\n",
+    "    # Edge attributes\n",
+    "    cop_edge_attr = np.round(np.random.rand(num_edges, 4) * scale_n1)\n",
+    "    sdc_edge_attr = np.round(np.random.rand(num_edges, 5) * scale_n1)\n",
+    "    ship_list = list(ship_map.keys())\n",
+    "    cust_list = list(cust_map.keys())\n",
+    "    prod_list = list(prod_map.keys())\n",
+    "    idx+=1\n",
+    "    # node combinations\n",
+    "    nodes = []\n",
+    "    for _ in range(num_edges):\n",
+    "        nodes.append([random.choice(ship_list),random.choice(cust_list),random.choice(prod_list)])\n",
+    "    cols = [\"ship_name\",\"cust_name\",\"prod_name\",\"cop1\",\"cop2\",\"cop3\",\"sdc1\",\"sdc2\",\"sdc3\",\"sdc4\",\"lab1\",\"lab2\"]\n",
+    "    df = pd.DataFrame(np.hstack((np.array(nodes),cop_edge_attr,sdc_edge_attr)),columns=cols)\n",
+    "    df.to_csv(os.path.join(edge_dir,\"day_{}.csv\".format(idx)),index=False,header=True)"
    ]
   },
   {
