--- a/Notebooks/Create Dummy data.ipynb
+++ b/Notebooks/Create Dummy data.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "125edb78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\envs\\GNN\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import os.path as osp\n",
@@ -26,12 +17,12 @@
     "import shutil\n",
     "\n",
     "#from data import DailyData ,YearlyData\n",
-    "from transform import getfullstats,ScaleEdges\n"
+    "#from transform import getfullstats,ScaleEdges\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7663e44b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "da7ff3bc",
    "metadata": {},
    "outputs": [],
@@ -63,19 +54,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "id": "26d996bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'E:\\\\GIT_ROOT\\\\Projects\\\\GNN\\\\Notebooks\\\\dailyroot'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = osp.join(os.getcwd(), \"dailyroot\")\n",
+    "root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "38f57d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'E:\\\\GIT_ROOT\\\\Projects\\\\GNN\\\\data\\\\dailyroot'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = \"E:\\\\GIT_ROOT\\\\Projects\\\\GNN\\\\data\\\\dailyroot\"\n",
+    "root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "cbb560a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = osp.join(os.getcwd(), \"dailyroot\")\n",
     "node_dir = osp.join(root, \"raw/node-features/\")\n",
     "edge_dir = os.path.join(root, 'raw/relations/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e0dfff38",
    "metadata": {},
    "outputs": [],
@@ -96,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "1fd51416",
    "metadata": {},
    "outputs": [],
@@ -121,7 +155,7 @@
     "\n",
     "# Edge features \n",
     "idx = 0 \n",
-    "for _ in range(30):\n",
+    "for _ in range(90):\n",
     "    num_edges = random.choice(list(range(150,390))) # num_transactions\n",
     "    scale_n1 = random.choice(list(range(5,20)))\n",
     "    scale_n2 = random.choice(list(range(9,30)))\n",
